# AYA3_1

./: .travis.yml  CMakeLists.txt
include/: json.hpp  json_excepts.hpp  json_tools.hpp
scripts/: checks.sh
sources/: Source.cpp  json.cpp  json_excepts.cpp  json_tools.cpp
tests/: test.cpp
